; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_fsck.c_check_object.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_fsck.c_check_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object = type { i32 }

@verbose = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"Checking %s\00", align 1
@REACHABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object*)* @check_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_object(%struct.object* %0) #0 {
  %2 = alloca %struct.object*, align 8
  store %struct.object* %0, %struct.object** %2, align 8
  %3 = load i64, i64* @verbose, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load i32, i32* @stderr, align 4
  %7 = call i32 @_(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.object*, %struct.object** %2, align 8
  %9 = call i32 @describe_object(%struct.object* %8)
  %10 = call i32 @fprintf_ln(i32 %6, i32 %7, i32 %9)
  br label %11

11:                                               ; preds = %5, %1
  %12 = load %struct.object*, %struct.object** %2, align 8
  %13 = getelementptr inbounds %struct.object, %struct.object* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @REACHABLE, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %11
  %19 = load %struct.object*, %struct.object** %2, align 8
  %20 = call i32 @check_reachable_object(%struct.object* %19)
  br label %24

21:                                               ; preds = %11
  %22 = load %struct.object*, %struct.object** %2, align 8
  %23 = call i32 @check_unreachable_object(%struct.object* %22)
  br label %24

24:                                               ; preds = %21, %18
  ret void
}

declare dso_local i32 @fprintf_ln(i32, i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @describe_object(%struct.object*) #1

declare dso_local i32 @check_reachable_object(%struct.object*) #1

declare dso_local i32 @check_unreachable_object(%struct.object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
